moving pdfs around to make JINST directory smaller for uplading, also fixed leonidases name in the authorlist (moved the \note inside of the brackets because when it was outside it was causing problems with compilation of author page) and removed line numbers

--- a/MCS_JINST/MCS_JINST_main.tex
+++ b/MCS_JINST/MCS_JINST_main.tex
@@ -4,10 +4,10 @@
 
 \usepackage{jinstpub} % for details on the use of the package, please
                      % see the JINST-author-manual
-\usepackage{lineno}
+% \usepackage{lineno}
 \usepackage{amsmath}
 
-\linenumbers
+% \linenumbers
 \hyphenation{MicroBooNE}
 %\linespread{2} %temp double spacing for style reviewers
 
@@ -82,8 +82,7 @@
 \author[b]{J.~Joshi}
 \author[g]{H.~Jostlein}
 \author[f]{D.~Kaleko}
-\author[aa,1]{L.~N.~Kalousis}      % only for MCS paper !!!!
-\note{now at: Vrije Universiteit Brussel}
+\author[aa,1]{L.~N.~Kalousis\note{now at: Vrije Universiteit Brussel}}   % only for MCS paper !!!!
 \author[l,f]{G.~Karagiorgi}
 \author[g]{W.~Ketchum}
 \author[b]{B.~Kirby}
